src/objects/Gumutindo_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Comment_on_contract__c</fullName>
        <label>Comment on contract</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_crops__c</fullName>
        <label>Cover crops</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Erosion_Control__c</fullName>
        <label>Erosion Control</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <label>GPS Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Gumutindo_Primary_Society__c</fullName>
        <label>Gumutindo Primary Society</label>
        <referenceTo>Gumutindo_Primary_Society__c</referenceTo>
        <relationshipLabel>Gumutindo Farmers</relationshipLabel>
        <relationshipName>Gumutindo_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Have_Contract_with_Gumutindo__c</fullName>
        <label>Have Contract with Gumutindo</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manure_Applied__c</fullName>
        <label>Manure Applied</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Respondent__c</fullName>
        <label>Name of Respondent</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_advice_given__c</fullName>
        <label>New advice given</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Coffee_Plots__c</fullName>
        <label>Number of Coffee Plots</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trees__c</fullName>
        <label>Number of Trees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pruning__c</fullName>
        <label>Pruning</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Practices__c</fullName>
        <formula>IF(((Weeding__c ==&apos;Good&apos; &amp;&amp; Manure_Applied__c ==&apos;Yes&apos; &amp;&amp; Pruning__c == &apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c ==&apos;Good&apos;) || (Weeding__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c == &apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Weeding__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c ==&apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Weeding__c == &apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Manure_Applied__c == &apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Manure_Applied__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c == &apos;Good&apos;) || (Manure_Applied__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c == &apos;Good&apos;) || (Pruning__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c == &apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Pruning__c == &apos;Yes&apos; &amp;&amp; Cover_crops__c == &apos;Good&apos;) || (Shade_Trees__c == &apos;Good&apos; &amp;&amp; Erosion_Control__c == &apos;Yes&apos; &amp;&amp; Pruning__c == &apos;Good&apos;)) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommended Practices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shade_Trees__c</fullName>
        <label>Shade Trees</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weeding__c</fullName>
        <label>Weeding</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yield_Estimates__c</fullName>
        <label>Yield Estimates</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Gumutindo Farmer</label>
    <nameField>
        <displayFormat>GF-{0000}</displayFormat>
        <label>Gumutindo Farmer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gumutindo Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>